samples/_failures_safe/1761044346_1327e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e962719.c: In function ‘main’:
./samples/SAFE/__tmp_4e962719.c:153:5: error: expected expression at end of input
  153 |     if (type_input < 0 || type_input >
      |     ^~
./samples/SAFE/__tmp_4e962719.c:153:5: error: expected declaration or statement at end of input
